Fix contactText centering css bug on Safari
Fix it by explicitly calculating left offset

--- a/src/styles/login/LoginView.less
+++ b/src/styles/login/LoginView.less
@@ -32,6 +32,7 @@
         font-weight: bold;
         position: absolute;
         bottom: 30px;
+        left: calc(50% - 125px);
     }
 
     &.contact {
